--- a/flowerlang/birthday.html
+++ b/flowerlang/birthday.html
@@ -10,7 +10,15 @@
   <div class="container">
     <header>
       <h1>花卉百科 - 生日推薦</h1>
-      <p>輸入你的生日，看看當月的誕生花是什麼！</p>
+      <nav>
+        <ul>
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="about.html">關於我們</a></li>
+          <li><a href="quiz.html">花語測驗</a></li>
+          <li><a href="birthday.html">生日花語</a></li>
+          <li><a href="favorites.html">我的收藏</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section id="birthdaySection">
