--- a/flowerlang/about.html
+++ b/flowerlang/about.html
@@ -10,6 +10,15 @@
   <div class="container">
     <header>
       <h1>關於花卉百科</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="about.html">關於我們</a></li>
+          <li><a href="quiz.html">花語測驗</a></li>
+          <li><a href="birthday.html">生日花語</a></li>
+          <li><a href="favorites.html">我的收藏</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section>
