--- a/flowerlang/quiz.html
+++ b/flowerlang/quiz.html
@@ -23,7 +23,15 @@
       
   <header>
     <h1>花語小遊戲 🌼</h1>
-    <a href="index.html">← 回首頁</a>
+    <nav>
+      <ul>
+        <li><a href="index.html">首頁</a></li>
+        <li><a href="about.html">關於我們</a></li>
+        <li><a href="quiz.html">花語測驗</a></li>
+        <li><a href="birthday.html">生日花語</a></li>
+        <li><a href="favorites.html">我的收藏</a></li>
+      </ul>
+    </nav>
   </header>
 
   <section class="quiz-section">
